src/index.css
:root {
  --foreground: #1d181e;
  --background: #f6f0fa;
  --light: #ffffff;
  --subtle: #d7d7d7;

  --primary: var(--foreground);
  --primary-subtle: hsl(from var(--primary) h s calc(l * 2.5));

  --secondary: #279e89;
  --secondary-subtle: hsl(from var(--secondary) h s calc(l * 1.3));

  --tertiary: #dc1830;
  --tertiary-subtle: hsl(from var(--tertiary) h s calc(l * 1.9));

  --highlight: #7373dd;
  --danger: #ac3737;

  --spacing-s: 0.5rem;
  --spacing: 1rem;
  --spacing-m: 2rem;
  --padding: 1rem;
  --radius: 0.5rem;
  --radius-m: 1rem;
  --shadow: 0 5px 10px #bebebebe;
}

html {
  /* This fixes horizontal jumps while loading data */
  margin-left: calc(100vw - 100%);
  margin-right: 0;
}

body {
  background-color: var(--background);
  /* font-family: system-ui; */
  font-family: "Outfit", sans-serif;
  font-weight: 300;
  color: var(--foreground);
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

a {
  text-decoration: none;
  color: inherit;
}

hr {
  border-block-color: var(--subtle);
  border-width: 0;
  border-bottom-width: 1px;
  width: 100%;
}

input,
textarea {
  border-radius: var(--radius);
  border: none;
  outline: solid 1px var(--subtle);
  padding: var(--padding);
  font-family: monospace;
  background-color: var(--light);

  transition: all 200ms;

  &:focus {
    scale: 1.02;
    outline: solid 1px var(--highlight);
    box-shadow: var(--shadow);
  }

  &:disabled {
    background-color: var(--subtle);
  }
}

select {
}

.main-layout {
  min-width: 300px;
  max-width: 720px;
  margin: auto;
  .page-wrapper {
    margin-top: var(--spacing-m);
    min-height: 500px;
  }
}

.main-navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;

  menu {
    display: flex;
    gap: 1rem;
  }
}

.article-card {
  display: flex;
  flex-direction: column;
  gap: var(--spacing);
  margin-bottom: var(--spacing-m);
  transition: all 200ms;

  title {
    font-size: 2rem;
    margin: var(--spacing) 0;
  }

  &:hover {
    scale: 1.01;
    box-shadow: 0 5px 10px #bebebebe;
  }
}

.article-meta {
  display: flex;
  justify-content: space-between;
  align-items: center;

  .details {
    font-size: 0.9rem;
  }
}

.vote-stat {
  height: 1rem;
  display: flex;
  align-items: center;
  gap: calc(var(--spacing) / 2);
  padding: calc(var(--padding) / 2) var(--padding);
  border-radius: 2rem;
  border: none;

  font-weight: 700;
  color: var(--light);

  background-color: var(--secondary);

  svg {
    width: 100%;
    height: 100%;
  }
}

.vote-wrapper {
  display: flex;
  align-items: center;
  border-radius: 1rem;

  button {
    cursor: pointer;
  }

  &.positive,
  &.negative {
    color: var(--light);

    svg {
      color: var(--light);
    }
  }

  &.positive {
    background-color: var(--secondary);
  }

  &.negative {
    background-color: var(--danger);
  }
}

.image-wrapper {
  height: 300px;
  overflow: hidden;
  border-radius: var(--radius-m);
  img {
    object-fit: cover;
    width: 100%;
    height: 100%;
  }
}

.content-wrapper,
.layout-wrapper {
  display: flex;
  flex-direction: column;
  gap: var(--spacing);
}

.layout-wrapper {
  gap: var(--spacing-m);
}

/* Spinner */
.spinner {
  width: 48px;
  height: 48px;
  border: 3px solid var(--subtle);
  border-radius: 50%;
  display: inline-block;
  position: relative;
  box-sizing: border-box;
  animation: rotation 1s linear infinite;
  margin: auto;
}
.spinner::after {
  content: "";
  box-sizing: border-box;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 56px;
  height: 56px;
  border-radius: 50%;
  border: 3px solid transparent;
  border-bottom-color: var(--tertiary);
}

@keyframes rotation {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* Comment List */
.comment-card {
  header {
    display: flex;
    justify-content: space-between;
    align-items: center;

    .author {
      font-weight: 700;
    }
    .date {
      color: var(--subtle);
    }
  }

  footer {
    display: flex;
    justify-content: end;
    align-items: center;
    gap: var(--spacing);
  }
}

.card {
  background-color: var(--light);
  border: solid 1px var(--subtle);
  border-radius: var(--radius-m);
  padding: var(--padding);
}

.icon-btn {
  --size: 2rem;
  width: var(--size);
  height: var(--size);

  display: flex;
  justify-content: center;
  align-items: center;

  background: none;
  border: none;
  color: var(--foreground);

  padding: 0.5rem;

  svg {
    height: 100%;
    width: 100%;
  }

  &:disabled {
    color: var(--subtle);
  }
}

.comment-form {
  footer {
    display: flex;
    justify-content: end;
  }
}

/* LOADER */
/* HTML: <div class="loader"></div> */

.loader {
  --height: 2rem;
  display: grid;
  height: var(--height);
  width: calc(var(--height) * 2.5);
  place-content: center;
  overflow: hidden;

  div {
    scale: 0.5;
    height: 15px;
    aspect-ratio: 4;
    --_g: no-repeat radial-gradient(farthest-side, var(--subtle) 90%, #0000);
    background: var(--_g) left, var(--_g) right;
    background-size: 25% 100%;
    display: grid;

    &:before,
    &:after {
      content: "";
      height: inherit;
      aspect-ratio: 1;
      grid-area: 1/1;
      margin: auto;
      border-radius: 50%;
      transform-origin: -100% 50%;
      background: var(--subtle);
      animation: l49 1s infinite linear;
    }
    &:after {
      transform-origin: 200% 50%;
      --s: -1;
      animation-delay: -0.5s;
    }
  }
}

@keyframes l49 {
  58%,
  100% {
    transform: rotate(calc(var(--s, 1) * 1turn));
  }
}

.topics-wrapper {
  display: flex;
  flex-wrap: wrap;
  gap: var(--spacing);

  li {
    flex-grow: 1;
  }

  li > a {
    min-width: 300px;
    height: 100px;
    position: relative;
    display: grid;
    place-content: center;
    overflow: hidden;
    border-radius: var(--radius-m);
    background-color: var(--secondary-subtle);
    border: solid 1px var(--subtle);

    &,
    span,
    .overlay {
      transition: all 200ms ease-in-out;
    }

    span {
      font-size: 2rem;
      text-transform: uppercase;
      font-weight: 700;
      letter-spacing: 0.1rem;
    }

    .overlay {
      position: absolute;
      inset: 0;
      display: grid;
      place-content: center;
      font-weight: 700;
      opacity: 0;
      /* color: var(--light); */
      background-color: var(--secondary);
      font-size: 1.5rem;
      text-align: center;
    }

    &:hover {
      /* scale: 1.01;
      box-shadow: var(--shadow); */

      span {
        opacity: 0;
      }

      .overlay {
        opacity: 1;
      }
    }
  }
}

.error-card {
  margin: auto;
  text-align: center;

  .message {
    font-size: 1.2rem;
  }

  .details {
    font-size: 0.8rem;
  }

  footer {
    display: flex;
    gap: var(--spacing);
  }
}

.btn {
  --default-color: var(--primary-subtle);
  --action-color: var(--primary);
  --font-color: var(--light);

  background-color: var(--default-color);
  color: var(--font-color);
  font-family: inherit;
  font-weight: 500;
  font-size: 1rem;
  padding: calc(var(--padding) / 2) var(--padding);
  border-radius: var(--radius);
  transition: all 200ms ease-in-out;
  border: none;
  cursor: pointer;

  &:hover {
    background-color: var(--action-color);
  }

  &:disabled {
    --default-color: var(--subtle);

    cursor: unset;
    background-color: var(--default-color);
  }
}

.login-form {
  margin: auto;
  width: 300px;

  h1 {
    text-align: center;
  }

  .error {
    font-weight: 700;
    color: var(--danger);
    margin: 0;
  }

  footer {
    display: flex;
    justify-content: end;
  }
}

.code-info {
  --deafult-color: var(--secondary);

  margin: auto;
  border: solid 3px var(--deafult-color);
  border-radius: var(--radius);
  padding: var(--padding);
  color: var(--deafult-color);
  background-color: hsl(from var(--deafult-color) h s l / 0.1);
  text-wrap: wrap;
  line-height: 1.2rem;
}

.sort-bar {
  display: flex;
  flex-direction: column;

  button {
    border: none;
    background-color: var(--default-color);
    cursor: pointer;
    padding: calc(var(--padding) / 2) var(--padding);
    color: var(--default-text);

    &:hover {
      background-color: var(--action-color);
      color: var(--action-text);
    }

    &.active {
      background-color: var(--state-color);
      color: var(--state-text);
      font-weight: 700;
    }
  }

  header {
    --default-color: inherit;
    --default-text: inherit;
    --action-color: var(--secondary-subtle);
    --action-text: inherit;
    --state-color: var(--secondary);
    --state-text: var(--light);

    height: 3rem;
    background-color: var(--light);
    border-radius: 1.5rem;
    overflow: hidden;
    border: solid 1px var(--subtle);

    .tab {
      border-right: solid 1px var(--subtle);
    }
  }

  header,
  ul {
    display: flex;
  }

  ul {
    --default-color: var(--tertiary-subtle);
    --default-text: inherit;
    --action-color: var(--tertiary);
    --action-text: var(--light);
    --state-color: var(--tertiary);
    --state-text: var(--light);

    margin-top: var(--spacing-s);
    gap: var(--spacing-s);

    button {
      border-radius: 1.5rem;
    }
  }
}

